[package]
name = "rustlearn"
version = "0.5.0"
description = "A machine learning package for Rust."
documentation = "https://maciejkula.github.io/rustlearn/doc/rustlearn/"
homepage = "https://github.com/maciejkula/rustlearn"
repository = "https://github.com/maciejkula/rustlearn"
readme = "readme.md"
license = "Apache-2.0"
keywords = ["machine-learning"]
authors = ["Maciej Kula <maciej.kula@gmail.com>"]
exclude = [
	"scripts/*",
	"examples/*",
	"test_data/*",
]
links = "libsvm"
build = "build.rs"

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
crossbeam = "0.8.1"
serde = "1.0.126"
serde_derive = "1.0.126"

[build-dependencies]
cc = "1.0.68"

[dev-dependencies]
bincode = "1.3.3"
csv = "1.1.6"
hyper = "0.14.8"
serde_json = "1.0.64"
time = "0.2.26"

[features]
all_tests = []
bench = []
